# qemu-tcg-plugin

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.target  VERSION  configure  cpus.c  disas.c  exec.c  gdbstub.c  meson.build  meson_options.txt  qemu-options.hx  rules.mak  vl.c
accel/tcg/: cpu-exec.c  tcg-runtime.h  translate-all.c  translator.c
bsd-user/: main.c
gdbstub/: gdbstub.c
hw/9pfs/: 9p.c
include/: qemu-common.h
include/disas/: disas.h
include/exec/: cpu-all.h  gdbstub.h  gen-icount.h
include/hw/: elf_ops.h
include/hw/core/: cpu.h
include/tcg/: tcg.h
libelfin/: gen_to_string.sh  meson.build
linux-user/: elfload.c  ioctls.h  main.c  mmap.c  qemu.h  strace.c  syscall.c  user-internals.h  user-mmap.h
linux-user/i386/: cpu_loop.c
scripts/: meson-buildoptions.sh
semihosting/: arm-compat-semi.c
softmmu/: vl.c
tcg/: meson.build  tcg-internal.h  tcg-op-vec.c  tcg-op.c  tcg-plugin.c  tcg-plugin.h  tcg-plugin.inc.c  tcg.c  tcg.h
tcg/plugins/: README  coverage.c  cpp.c  dineroIV.c  dyncount.c  dyntrace.c  ftrace.c  icount-inlined.c  icount.c  iomem-example.c  meson.build  oprofile.c  profile.c  trace.c
tcg/plugins/cpp/: coverage.cpp  program_profiler.cpp
tcg/plugins/d4-7/: meson.build  misc.c
